...
      android:paddingTop="28dp"
      android:paddingRight="16dp"
      android:paddingBottom="20dp"
      android:text="@string/administrator_controls_app_information_label"
      android:textColor="@color/colorPrimary"
      android:textSize="14sp"
      app:layout_constraintBottom_toTopOf="@id/app_version_text_view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/app_version_text_view"
...
